--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -16,9 +16,6 @@
 	<string>sos_bebe_app</string>
     <key>NSCameraUsageDescription</key>
     <string>Scan your card to add it automatically</string>
-    <key>NSCameraUsageDescription
-    &lt;string&gt;To scan cards&lt;/string&gt;</key>
-    <string>To scan cards</string>
 	<key>CFBundlePackageType</key>
 	<string>APPL</string>
 	<key>CFBundleShortVersionString</key>
@@ -52,5 +49,32 @@
 	<true/>
 	<key>UIApplicationSupportsIndirectInputEvents</key>
 	<true/>
+
+	<!-- Facebook SDK configuration starts here -->
+	<key>CFBundleURLTypes</key>
+	<array>
+		<dict>
+			<key>CFBundleURLSchemes</key>
+			<array>
+				<!-- Facebook App ID as a URL Scheme -->
+				<string>fb1268721061236955</string>
+			</array>
+		</dict>
+	</array>
+	<key>FacebookAppID</key>
+	<string>1268721061236955</string>
+	<key>FacebookClientToken</key>
+	<string>6bde3cfb4fb16389272e4a4c55ed3127</string>
+	<key>FacebookDisplayName</key>
+	<string>Sos Bebe App</string>
+	<key>LSApplicationQueriesSchemes</key>
+	<array>
+		<string>fbapi</string>
+		<string>fb-messenger-api</string>
+		<string>fbauth2</string>
+		<string>fbshareextension</string>
+	</array>
+	<!-- Facebook SDK configuration ends here -->
+
 </dict>
 </plist>
