--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -64,6 +64,7 @@ dependencies:
   external_path: ^1.0.3
   agora_token_service: ^0.1.2
   pin_code_fields: ^8.0.1
+  agora_rtm: ^1.5.9
   shared_preferences: ^2.2.2
   device_info_plus: ^9.1.2
   crypto: ^3.0.3
