--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -20,6 +20,8 @@
         android:name="${applicationName}"
         android:icon="@mipmap/ic_launcher">
 
+        android:enableOnBackInvokedCallback="true"
+
         <activity
             android:name=".MainActivity"
             android:exported="true"
