--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -61,7 +61,7 @@ dependencies:
   scroll_to_index: ^3.0.1
   flutter_rating_bar: ^4.0.1
   screenshot: ^2.1.0
-  external_path: ^1.0.3
+#  external_path: ^1.0.3
   agora_token_service: ^0.1.2
   pin_code_fields: ^8.0.1
   agora_rtm: ^1.5.9
@@ -82,6 +82,7 @@ dependencies:
   fluttertoast: ^8.2.5
   expand_tap_area: ^1.1.1
   syncfusion_flutter_pdfviewer: ^22.2.7
+  pdf_render: ^1.4.0
   list_picker: ^1.1.0
 dev_dependencies:
   flutter_test:
