--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -63,6 +63,7 @@ dependencies:
   screenshot: ^2.1.0
 #  external_path: ^1.0.3
   agora_token_service: ^0.1.2
+  sentry_flutter: ^8.2.0
   pin_code_fields: ^8.0.1
   agora_rtm: ^1.5.9
   shared_preferences: ^2.2.2
