--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -22,8 +22,12 @@ if (flutterVersionName == null) {
 }
 
 apply plugin: 'com.android.application'
+// START: FlutterFire Configuration
+apply plugin: 'com.google.gms.google-services'
+// END: FlutterFire Configuration
 apply plugin: 'kotlin-android'
 apply from: "$flutterRoot/packages/flutter_tools/gradle/flutter.gradle"
+
 
 android {
     compileSdkVersion 34
@@ -35,7 +39,7 @@ android {
 
     defaultConfig {
         applicationId "com.example.sos_bebe_app"
-        minSdkVersion 21
+        minSdkVersion 23
         targetSdkVersion 34
         versionCode flutterVersionCode.toInteger()
         versionName flutterVersionName
@@ -74,6 +78,7 @@ dependencies {
     implementation 'com.android.support:multidex:1.0.3'
     implementation 'com.stripe:stripe-android:20.0.0'
     implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
+    implementation platform('com.google.firebase:firebase-bom:33.13.0')
 }
 
 allprojects {
