--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,7 +15,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 # Read more about iOS versioning at
 # https://developer.apple.com/library/archive/documentation/General/Reference/InfoPlistKeyReference/Articles/CoreFoundationKeys.html
 # In Windows, build-name is used as the major, minor, and patch parts
-# of the product and file versions while build-number is used as the build suffix.
+# of the product and file versions while build-number is used as the build suffiffx.
 version: 1.0.0+1
 
 environment:
@@ -85,6 +85,8 @@ dependencies:
   syncfusion_flutter_pdfviewer: ^22.2.7
   pdf_render: ^1.4.0
   list_picker: ^1.1.0
+  firebase_storage: ^11.2.7
+  cloud_firestore: ^4.8.5
 dev_dependencies:
   flutter_test:
     sdk: flutter
