--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -114,6 +114,7 @@ flutter:
     - assets/images/
     - assets/icons/
     - assets/messages.json
+    - assets/
 
 #lansarea logo-ului Sos Bebe la inițializarea aplicației
 
